Responses to CA and one in-text citation fixed

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -285,7 +285,9 @@ The results of the meta-analysis offer several important insights. First, compar
 
 [^2]: Values reported as $R^2$ in original study.
 
-<!-- Note. there is no clear conversion from Average precision to MCC, although we could estimate this from our data using regression? or to calculate both metrics from the confusion matrix. CA: this sounds like an interesting and achievable idea. The confusion matrices are encoded and then summarized with the caret and yardstick packages, and we can potentially extract many other useful measures from them with yardstick::summary(), demonstrated here: https://yardstick.tidymodels.org/reference/summary.conf_mat.html -->
+<!-- Note. there is no clear conversion from Average precision to MCC, although we could estimate this from our data using regression? or to calculate both metrics from the confusion matrix. CA: this sounds like an interesting and achievable idea. The confusion matrices are encoded and then summarized with the caret and yardstick packages, and we can potentially extract many other useful measures from them with yardstick::summary(), demonstrated here: https://yardstick.tidymodels.org/reference/summary.conf_mat.html. 
+
+TE: Interesting, it is a potential weakness and it would make our promotion of MCC more valuable when we could demonstrate how these two are linked, but perhaps to limit the workload, we could try identify a small subset to which to apply to this idea. -->
 
 Second, there is no single modelling technique that seems to arise on top, although linear models and random forests perform best in regression studies, and neural networks and support vector machines excel in classification tasks. We note that the model accuracy is surprisingly little affected by the number of features or the dataset size—likely the result of cross-validation techniques used to avoid overfitting—but the heterogeneity of the materials used in different studies may also mask substantial differences. For instance, the smaller datasets tend to use linear models and deliver higher model accuracy than larger datasets and those with a large number of features. We surmise that this might relate to disciplinary differences. For example, the smaller datasets often come from music psychology studies, which put a premium on data quality (quality control of the ground-truth data and features) rather than on data size and model techniques. Successful quality control is thought to decrease random errors inherent in human judgments. This argument is largely consistent with the analysis of the studies divided across journal types (psychology vs. engineering).
 
@@ -294,7 +296,9 @@ Third, there is little work on the relevance of the features and how these impac
 ```{=html}
 <!-- Question to @Cameron: We are a bit coy here as we don't really mention the tools by name (e.g. MIR toolbox, psysound, essentia, librosa, etc.). We have the information and should we write about them? Another gem to the supporting information as the space does not allow expansion. 
 
-CA: This is a great idea, and reminds me we also have the Panda categories, which we have encoded, but haven't touched. We could explore whether we can find additional patterns about feature categories, and possibly libraries by extending out our new heat map visualization approach. -->
+CA: This is a great idea, and reminds me we also have the Panda categories, which we have encoded, but haven't touched. We could explore whether we can find additional patterns about feature categories, and possibly libraries by extending out our new heat map visualization approach. 
+
+TE: Or if we submit the meta-analysis soon and create a more pragmatic breakdown of what is the state of the art technologies in MER, this could be sufficient for a brief article separately. The selling point would not be the prediction rate, but quality control issues and the techniques/tools/crossvals/datasets chosen so far.  -->
 ```
 
 ## Recommendations for future MER studies
@@ -308,9 +312,10 @@ Future reports should contain viable information about the data, models, and suc
 It would be also highly beneficial to share models and features transparently. If a study relies on published datasets, as most do, sharing the actual model (as code/notebooks) and features would allow for a more direct comparison of model techniques for the same dataset. Also, not all datasets are shared [@akiki2021; @santana2020; @hizlisoy2021mu; @zhang2017fe], or at least the sharing is only done partially. Standardizing reporting of datasets to include subsections explaining detailed information about stimuli (including genre, duration, sampling rate, and encoding format), features (types, extraction/analysis software, quantity of features, transformations, reduction methods), and models (types, tuning parameters, cross-validation) will enable more accurate comparisons between studies. The reporting in @grekow2018au serves as a useful example by providing enough detail in these areas to facilitate reproducibility. Although copyright restrictions may limit the sharing of some datasets, features and examples should be made available.
 
 ```{=html}
-<!-- Question to @Cameron: Could you add some of the studies included in the meta-analysis in the references to those studies that do not share datasets to make this more relevant. I just copied two references that I know are examples of datasets that require extra steps, but we have studies where we just don't even know whether the data is available, right? 
+<!-- Question to Cameron: Could you add some of the studies included in the meta-analysis in the references to those studies that do not share datasets to make this more relevant. I just copied two references that I know are examples of datasets that require extra steps, but we have studies where we just don't even know whether the data is available, right? 
 
-CA: I've added some studies now, though these were excluded from the final meta-analysis. I also have a few examples of those which were included in the final results based on scrolling through the articles. Many are psychology papers, where it seems less common to share data publicly, but those also tend to have more case-specific goals rather than comparing results to existing benchmarks, so I didn't cite them. @hizlisoy2021mu proposes a new turkish music database, but I wasn't able to find the data from the article, so I added that. @zhang2017fe uses a dataset but doesn't seem to provide information on how to access it. -->
+CA: I've added some studies now, though these were excluded from the final meta-analysis. I also have a few examples of those which were included in the final results based on scrolling through the articles. Many are psychology papers, where it seems less common to share data publicly, but those also tend to have more case-specific goals rather than comparing results to existing benchmarks, so I didn't cite them. @hizlisoy2021mu proposes a new turkish music database, but I wasn't able to find the data from the article, so I added that. @zhang2017fe uses a dataset but doesn't seem to provide information on how to access it.
+TE: great, well done, job done. -->
 ```
 
 <!-- ### Feature definition/validations -->
