--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -96,7 +96,9 @@ The search yielded studies of variable (and occasionally questionable) quality. 
 
 ## Study encoding
 
-To capture key details of each study, we added extra fields to BibTeX entries for each study. Fields included information about the genre/type of stimuli employed, along with their duration and number; the number of analyzed features; and the model type -- Neural Nets (NN), Support Vector Machines (SVM), Linear Methods (LM), Tree-based Methods (TM), KS, Add. and KNN Methods (KM) -- validation procedure and output measures. Additionally, we included study results using executable *R* code containing custom functions for meta-analysis. For complete details about our encoding procedure, see `studies/extraction_details.qmd` .
+To capture key details of each study, we added extra fields to BibTeX entries for each study. Fields included information about the genre/type of stimuli employed, along with their duration and number; the number of analyzed features; and the model type -- Neural Nets (NN), Support Vector Machines (SVM),[^2] Linear Methods (LM), Tree-based Methods (TM), KS, Add. and KNN Methods (KM) -- validation procedure and output measures. Additionally, we included study results using executable *R* code containing custom functions for meta-analysis. For complete details about our encoding procedure, see `studies/extraction_details.qmd` .
+
+[^2]: @chen2017co was the only study of those included to use Gaussian Mixture Models. We decided to group this with Support Vector Machines as they have been reported to perform similarly on mid-sized data sets [@mashao2003co].
 
 # Results
 
@@ -264,7 +266,7 @@ The number of features (as classified into under 30, between 30 and 300, and abo
 
 To assess how the use of different model types affected performance, we prepared heatmap visualizations depicting differences in success across feature *n* categories. We collapsed SVM and Tree-Based categories due to their low representation in the model summary. Figure 5 reveals studies using smaller feature sets tend to perform best, whereas the best model class differs depending on the prediction task.
 
-![Heatmap Depicting Success Across Tasks](../heat_map_figure.png "Heatmap depicting success across tasks according to Feature N category and model class. Labels indicate the number of studies and the median number of stimuli is shown in parentheses.")
+![Heatmap Depicting Success Across Tasks](../manuscript/heat_map_figure.png "Heatmap depicting success across tasks according to Feature N category and model class. Labels indicate the number of studies and the median number of stimuli is shown in parentheses."){width="892"}
 
 ```{=html}
 <!-- Notes to results: In the pre-registration, we promised the following:
@@ -287,9 +289,9 @@ We initially identified 96 studies involving MER models, but narrowed our select
 
 ## Improvements to predictive accuracy
 
-The results of the meta-analysis offer several important insights. First, compared to a 2013 report by @barthet2013, the glass ceiling for valence has risen from *r* = 0.51 to 0.67.[^2] Conversely, predictive accuracy for arousal has shown no improvement (reported already in 2013 at *r* = 0.83). For classification, studies reached variable classification rates from 0.497 using *F~1~* score [@sanden2011empirical] to 79% average precision [@trohidis2008multi] in the past, whereas now the accuracy is generally notably better, here $MCC$ = 0.87, albeit the differences in metrics.
+The results of the meta-analysis offer several important insights. First, compared to a 2013 report by @barthet2013, the glass ceiling for valence has risen from *r* = 0.51 to 0.67.[^3] Conversely, predictive accuracy for arousal has shown no improvement (reported already in 2013 at *r* = 0.83). For classification, studies reached variable classification rates from 0.497 using *F~1~* score [@sanden2011empirical] to 79% average precision [@trohidis2008multi] in the past, whereas now the accuracy is generally notably better, here $MCC$ = 0.87, albeit the differences in metrics.
 
-[^2]: Values reported as $R^2$ in original study.
+[^3]: @chen2017co was the only study in the included studies using Gaussian Mixture Models. We decided to group this with SVMs, as they are commonly applied in similar contexts and have been used together in hybrid systems.
 
 ```{=html}
 <!-- Note. there is no clear conversion from Average precision to MCC, although we could estimate this from our data using regression? or to calculate both metrics from the confusion matrix. CA: this sounds like an interesting and achievable idea. The confusion matrices are encoded and then summarized with the caret and yardstick packages, and we can potentially extract many other useful measures from them with yardstick::summary(), demonstrated here: https://yardstick.tidymodels.org/reference/summary.conf_mat.html. 
@@ -329,6 +331,11 @@ TE: great, well done, job done. -->
 <!-- ### Feature definition/validations -->
 
 One of the crucial aspects of modeling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data. For reference, the size of the datasets in MER are currently comparable to dataset sizes for modeling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms, which may explain the modest results observed in the music emotion recognition studies.
+
+<!-- ### Validation -->
+
+An encouraging finding is that ~94% of the studies analyzed here reported some form of model validation. The majority of studies validated models by splitting the dataset into separate sets for training and testing [e.g., @yang2021an], sometimes including an additional set for validation [@sorussa2020em]. Most used some form of cross validation (CV), with the most common type being 10-fold CV. Other varieties included 3-fold, 5-fold, or 6-fold CV, as well as more complex variants like nested leave-one-out CV [@coutinho2017sh] and 20 x 10-fold CV [@panda2020no]. Whereas many engineering studies performed model validation using one or more large databases, some psychological studies evaluating smaller datasets validated models by designing new experiments. Examples include comparing a model's performance on ground-truth data with annotations from a second experiment [@griffiths2021am; @beveridge2018po], or comparing a model's performance across different versions of the same music pieces [@battcock2021in].
+
 
 <!-- Western bias -->
 
