references: add mashaso2003co citation

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -6,7 +6,13 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
-
+@inproceedings{mashao2003co,
+  title={Comparing SVM and GMM on parametric feature-sets},
+  author={Mashao, Daniel J},
+  booktitle={Proceedings of the 14th Annual Symposium of the Pattern Recognition Association of South Africa},
+  pages={27--28},
+  year={2003},
+}
 
 @article{schindler2017me,
 	author = {Schindler, Ines and Hosoya, Georg and Menninghaus, Winfried and Beermann, Ursula and Wagner, Valentin and Eid, Michael and Scherer, Klaus R},
