--- a/manuscript/_figure3.qmd
+++ b/manuscript/_figure3.qmd
@@ -2,6 +2,8 @@
 #| label: fig3
 #| fig-width: 12
 #| fig-height: 6
+#| warning: false
+#| message: false
 #| echo: false
 #| fig.cap: > 
 #|   Forest plot of the best arousal models from all MER studies.
