--- a/manuscript/_figure4.qmd
+++ b/manuscript/_figure4.qmd
@@ -2,6 +2,8 @@
 #| label: fig4
 #| fig-width: 12
 #| fig-height: 6
+#| warning: false
+#| message: false
 #| echo: false
 #| fig.cap: > 
 #|   Forest plot of the best classification models from all MER studies.
